--- a/public/centos/centos_install_mysql.html
+++ b/public/centos/centos_install_mysql.html
@@ -25,8 +25,8 @@
 </a>
 <div class="navbar navbar-fixed-top hidden-print">
     <div class="container-fluid">
-        <a class="brand navbar-brand pull-left" href="/docx/index.php">docx文档生成工具</a>
-        <p class="navbar-text pull-right"> 在合适的时候使用PHP – Rasmus Lerdorf </p>
+        <a class="brand navbar-brand pull-left" href="../index.html">docx文档生成工具</a>
+        <p class="navbar-text pull-right"> 使用IDE, Templates和Snippets加速PHP开发 – Chad Kieffer </p>
     </div>
 </div>
 
@@ -179,7 +179,7 @@
                         <span style="float: left; font-size: 10px; color: gray;">
                         标签：linux, mysql                        </span>
                         <span style="float: right; font-size: 10px; color: gray;">
-                        <!--a href="/docx/index.phpauthor/ryan-liu"-->
+                        <!--a href="../author/ryan-liu"-->
                         Ryan Liu<!--/a--> 写于 2013年2月20日 星期三                        </span>
                     </div>
 
