--- a/public/centos/centos_install_php.html
+++ b/public/centos/centos_install_php.html
@@ -25,7 +25,7 @@
 </a>
 <div class="navbar navbar-fixed-top hidden-print">
     <div class="container-fluid">
-        <a class="brand navbar-brand pull-left" href="/docx/index.php">docx文档生成工具</a>
+        <a class="brand navbar-brand pull-left" href="../index.html">docx文档生成工具</a>
         <p class="navbar-text pull-right"> 使用批处理 – Jack D. Herrington </p>
     </div>
 </div>
@@ -179,7 +179,7 @@
                         <span style="float: left; font-size: 10px; color: gray;">
                         标签：linux, php                        </span>
                         <span style="float: right; font-size: 10px; color: gray;">
-                        <!--a href="/docx/index.phpauthor/ryan-liu"-->
+                        <!--a href="../author/ryan-liu"-->
                         Ryan Liu<!--/a--> 写于 2013年2月20日 星期三                        </span>
                     </div>
 
