--- a/public/help/github-flavored-markdown.html
+++ b/public/help/github-flavored-markdown.html
@@ -25,7 +25,7 @@
 </a>
 <div class="navbar navbar-fixed-top hidden-print">
     <div class="container-fluid">
-        <a class="brand navbar-brand pull-left" href="/docx/index.php">docx文档生成工具</a>
+        <a class="brand navbar-brand pull-left" href="../index.html">docx文档生成工具</a>
         <p class="navbar-text pull-right"> 在合适的时候使用PHP – Rasmus Lerdorf </p>
     </div>
 </div>
@@ -179,7 +179,7 @@
                         <span style="float: left; font-size: 10px; color: gray;">
                         标签：帮助, markdown, github                        </span>
                         <span style="float: right; font-size: 10px; color: gray;">
-                        <!--a href="/docx/index.phpauthor/"-->
+                        <!--a href="../author/"-->
                         <!--/a--> 写于 2014年4月8日 星期二                        </span>
                     </div>
 
