--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
 </a>
 <div class="navbar navbar-fixed-top hidden-print">
     <div class="container-fluid">
-        <a class="brand navbar-brand pull-left" href="/docx/index.php">docx文档生成工具</a>
-        <p class="navbar-text pull-right"> 利用好PHP的过滤函数 – Joey Sochacki </p>
+        <a class="brand navbar-brand pull-left" href="index.html">docx文档生成工具</a>
+        <p class="navbar-text pull-right"> 使用IDE, Templates和Snippets加速PHP开发 – Chad Kieffer </p>
     </div>
 </div>
 
@@ -192,9 +192,7 @@
             <div class="hero-buttons container-fluid">
                 <div class="row">
                     <div class="text-center col-sm-12">
-                                                <a href="https://github.com/azhai/docx"
-                                class="btn btn-secondary btn-hero"> 前往GitHub </a>
-                                                <a href="/docx/index.php/index/" class="btn btn-primary btn-hero">
+                                                <a href="index.html" class="btn btn-primary btn-hero">
                         开始阅读文档                        </a> </div>
                 </div>
             </div>
