--- a/public/python/python_pinyin.html
+++ b/public/python/python_pinyin.html
@@ -25,8 +25,8 @@
 </a>
 <div class="navbar navbar-fixed-top hidden-print">
     <div class="container-fluid">
-        <a class="brand navbar-brand pull-left" href="/docx/index.php">docx文档生成工具</a>
-        <p class="navbar-text pull-right"> 使用多表存储提高规模伸缩性 – Matt Mullenweg </p>
+        <a class="brand navbar-brand pull-left" href="../index.html">docx文档生成工具</a>
+        <p class="navbar-text pull-right"> 不要使用PHP框架 – Rasmus Lerdorf </p>
     </div>
 </div>
 
@@ -179,7 +179,7 @@
                         <span style="float: left; font-size: 10px; color: gray;">
                         标签：python, pinyin                        </span>
                         <span style="float: right; font-size: 10px; color: gray;">
-                        <!--a href="/docx/index.phpauthor/ryan-liu"-->
+                        <!--a href="../author/ryan-liu"-->
                         Ryan Liu<!--/a--> 写于 2012年3月31日 星期六                        </span>
                     </div>
 
